# experiment-ranker

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
experiments/reports/: report_all-MiniLM-L6-v2_h-05-baseline-protocol.csv  report_bm25_h-05-baseline-protocol.csv  report_gpt-4o-mini_h-05-single-answer-2-confidence.csv  report_gpt-4o-mini_h-05-single-answer-2.csv  report_gpt-4o-mini_h-05-single-answer-3.csv  report_gpt-4o-mini_h-05-single-answer-4.csv  report_gpt-4o-mini_h-05-single-answer-5.csv  report_gpt-4o-mini_h-05-single-zsfc-2.csv
experiments/results/gpt-4o-mini/h-05-single-answer-2-confidence/cchf-rainfall/: gpt-4o-mini_h-05-single-answer-2-confidence.csv
experiments/results/gpt-4o-mini/h-05-single-answer-2-confidence/ebola-rainfall/: gpt-4o-mini_h-05-single-answer-2-confidence.csv
experiments/templates/: gpt-4o-mini_h-05-single-answer-2-confidence.txt  gpt-4o-mini_h-05-single-answer-2.txt  gpt-4o-mini_h-05-single-answer-3.txt  gpt-4o-mini_h-05-single-answer-4.txt  gpt-4o-mini_h-05-single-answer-5.txt  gpt-4o-mini_h-05-single-zsfc-2.txt
notebooks/: Ranker-Baseline-All-MiniLM-protocol.ipynb  Ranker-Baseline-BM25-protocol.ipynb  Ranker-Baseline-Zero-Shot-CoT-5-level.ipynb  Ranker-QA-2-level-conf.ipynb  Ranker-QA-2-level.ipynb  Ranker-QA-3-level.ipynb  Ranker-QA-4-level.ipynb  Ranker-QA-5-level.ipynb
src/clizod_ranker/: __init__.py  async_llm_client.py  create_directory.py  experiment_runner.py  load_data.py  model_infos.py  process_results.py  prompt_generator.py  response_format.py
(+22 files in other folders)
